--- a/index.html
+++ b/index.html
@@ -71,15 +71,28 @@
       <br>
     </div>
 
-    <div id="divClone">
+    <div class="flex-container">
+      <div class="flex-child">
+        <div id="divClone">
+          <h2>Character List:</h2>
 
+        </div>
+      </div>
+
+      <div class="flex-child">
+        <div id="canvasDiv">
+          <h2>Stats Comparison:</h2>
+          <!--<button type="button" name="button" onclick="">Comparasion</button> -->
+          <div id="canvasDiv_Comparison">
+            <canvas id="myChart2" width="300" height="300"></canvas>
+          </div>
+
+        </div>
+      </div>
     </div>
 
-    <div id="canvasDiv">
-      <hr>
-      <h2>Stats Comparison:</h2>
-      <canvas id="myChart2" width="300" height="300"></canvas>
-    </div>
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js">
 
