--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="flex-child">
           <h1>Alternia's Calamity - Character Tracker</h1>
         </div>
-<!--
+
         <div class="flex-child" id="optionsDiv">
           <div class="" id="buttonsDivID">
             <button type="button" name="button" class="optionButton" onclick="ShowAllCharacters()">All</button>
@@ -20,75 +20,79 @@
             <button type="button" name="button" class="optionButton" onclick="ShowAct2Characters()">Act 2</button>
           </div>
         </div>
-        -->
+
       </div>
     </header>
 
     <!-- <img src="Images/Tyrous.png" alt="" id="imageTest"> -->
-
-    <div id="divParent">
-      <button type="button"class="collapsible" name="button">Joiboy Nassus</button>
-      <div class="characterDivClass">
-        <img src="Images/Profile Pics/Joiboy.png" class="profileImageClass" id="profileImageID">
-        <img src="Images/Signs/Joiboy.png" class="signImageClass" id="signImageID">
-        <div class="flex-container">
-          <div class="flex-child">
-            <label id="label_N_S_B">Name: Joiboy Nassus | Species: Troll | Blood Color: Violet</label>
-            <br>
-            <br>
-            <label id="label_Gender">Gender: Male</label>
-            <br>
-            <label id="label_Age">Age: 8 Sweeps</label>
-            <br>
-            <label id="label_Height">Height: 1.55cm</label>
-            <br>
-            <br>
-            <label id="label_Un_Tc">User name: aquaticDreamer | Text Color: #6a006a</label>
-            <br>
-            <label id="label_TypingQ">Typing quirk: All "w" are capitalised, "o" are always typed as "ô". Says "Dood" isntead of "Dude"</label>
-            <br>
-            <br>
-            <br>
-            <label id="label_S_C_A_D">Sign: Aquapio | Class: Knight | Aspect: Light | Dreamself: Prospit</label>
-            <br>
-            <br>
-            <label id="label_P_C_D">Planet: Land of Neon and Gears | Consorts: None | Denizen: Unkown</label>
-            <br>
-            <br>
-            <label id="label_StrifeDeck">Strife Deck: Gunkind, Knifekind</label>
-            <br>
-            <br>
-            <label id="label_Sylladex">Sylladex Modi: Puzzle</label>
-            <br>
-            <br>
-            <label id="label_Lusus_Guardian">Lusus: Leviathan</label>
-            <br>
-            <br>
-            <label id="label_Notes">Notes: </label>
-          </div>
-          <div class="flex-child">
-            <label>Stats:</label><br><br>
-            <label id="label_STAT_PL">Power Level: 10</label><br>
-            <label id="label_STAT_INT">Intelligence: 10</label><br>
-            <label id="label_STAT_WIS">Wisdom: 10</label><br>
-            <label id="label_STAT_VIT">Vitalidy: 10</label><br>
-            <label id="label_STAT_SPD">Speed: 10</label><br>
-            <label id="label_STAT_PCS">Precision: 10</label><br>
-            <label id="label_STAT_CHA">Charisma: 10</label>
-
-            <div id="canvasDiv">
-              <canvas id="myChart" width="300" height="300"></canvas>
+    <div class="" style="display: none">
+      <div id="divParent">
+        <button type="button"class="collapsible" name="button">Joiboy Nassus</button>
+        <div class="characterDivClass">
+          <img src="Images/Profile Pics/Joiboy.png" class="profileImageClass" id="profileImageID">
+          <img src="Images/Signs/Joiboy.png" class="signImageClass" id="signImageID">
+          <div class="flex-container">
+            <div class="flex-child">
+              <label id="label_N_S_B">Name: Joiboy Nassus | Species: Troll | Blood Color: Violet</label>
+              <br>
+              <br>
+              <label id="label_Gender">Gender: Male</label>
+              <br>
+              <label id="label_Age">Age: 8 Sweeps</label>
+              <br>
+              <label id="label_Height">Height: 1.55cm</label>
+              <br>
+              <br>
+              <label id="label_Un_Tc">User name: aquaticDreamer | Text Color: #6a006a</label>
+              <br>
+              <label id="label_TypingQ">Typing quirk: All "w" are capitalised, "o" are always typed as "ô". Says "Dood" isntead of "Dude"</label>
+              <br>
+              <br>
+              <br>
+              <label id="label_S_C_A_D">Sign: Aquapio | Class: Knight | Aspect: Light | Dreamself: Prospit</label>
+              <br>
+              <br>
+              <label id="label_P_C_D">Planet: Land of Neon and Gears | Consorts: None | Denizen: Unkown</label>
+              <br>
+              <br>
+              <label id="label_StrifeDeck">Strife Deck: Gunkind, Knifekind</label>
+              <br>
+              <br>
+              <label id="label_Sylladex">Sylladex Modi: Puzzle</label>
+              <br>
+              <br>
+              <label id="label_Lusus_Guardian">Lusus: Leviathan</label>
+              <br>
+              <br>
+              <label id="label_Notes">Notes: </label>
             </div>
+            <div class="flex-child">
+              <label>Stats:</label><br><br>
+              <label id="label_STAT_PL">Power Level: 10</label><br>
+              <label id="label_STAT_INT">Intelligence: 10</label><br>
+              <label id="label_STAT_WIS">Wisdom: 10</label><br>
+              <label id="label_STAT_VIT">Vitalidy: 10</label><br>
+              <label id="label_STAT_SPD">Speed: 10</label><br>
+              <label id="label_STAT_PCS">Precision: 10</label><br>
+              <label id="label_STAT_CHA">Charisma: 10</label><br>
+              <label id="label_STAT_SPT">Spirit: 10</label>
 
+              <div id="canvasDiv">
+                <canvas id="myChart" width="300" height="300"></canvas>
+              </div>
+
+            </div>
           </div>
         </div>
       </div>
+
     </div>
 
     <div class="flex-container">
       <div class="flex-child">
+        <h2>Character List:</h2>
         <div id="divClone">
-          <h2>Character List:</h2>
+
 
         </div>
       </div>
