--- a/index.html
+++ b/index.html
@@ -105,6 +105,19 @@
             <div id="canvasDiv_Comparison">
               <canvas id="myChart2" width="300" height="300"></canvas>
               <p>*Click on tags to hide character's Stats</p>
+              <p>Power Level: The Character's general strenght, combining muscle strenght, battle skill and their gear.</p>
+              <p>Intelligence: How smart a character is, how quick they can learn something and absorve information</p>
+              <p>Wisdom: Character's general knowledge of the world (This skill can not be Limit Breaked)</p>
+              <p>Vitalidy: Character's physical health</p>
+              <p>Speed: Character's physical speed and reaction speed</p>
+              <p>Precision: Character precision, this includes their aim, actions and fights</p>
+              <p>Charisma: The character's charisma (This skill can not be Limit Breaked)</p>
+              <p>Spirit: The character's ability and connection to their aspect (This skill can not be Limit Breaked)</p>
+              <br>
+              <p>Limit Break: This is a lost game mechanic. A player is able to use the Limit Break to either boost one of their skills to the next rank or boost it constantly if it's MAX ranked.</p>
+              <p>However Limit Breaking will damage the player's body if used more than once in a roll. Requiring the player to time the LBs out and train enough to gain control over it.</p>
+              <p>To learn the Limit Break Ability, it's pre required for a player to have at least one SSS ranked skill. Then the player must study the book "The Art of Limit Breaking". If the player does not have an SSS ranked skill, they will not udnerstand the ability</p>
+              <p>A Light Player with an class of the "Change", "Create", or "Serve" archtype are able to send the ability's into another player's mind if they meet the pre requirements. Skipping the need to study the book. But this will require the Light player to Limit Break</p>
             </div>
 
             <div style="position: absolute; top:150px; left:500px;">
