--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <label id="label_Lusus_Guardian">Lusus: Leviathan</label>
               <br>
               <br>
-              <label id="label_Notes">Notes: </label>
+              <textarea name="name" rows="8" cols="80" id="textarea_Notes" readonly></textarea>
             </div>
             <div class="flex-child">
               <label>Stats:</label><br><br>
